fix ascii header scrollbar issue

--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ footer {
   font-size: 12px;
   background: transparent;
   color: #eaeaea;
+  overflow-x: hidden;
 }
 
 /* ASCII Separator */
@@ -413,6 +414,7 @@ footer {
   font-size: 11px;
   background: transparent;
   color: #9e9e9e;
+  overflow-x: hidden;
 }
 
 /* Dictionary Preview */
